# Broken-Divinity-Python

./: .gitignore  ASCII_Roguelike_Plan.md  HOP3_COMPLETION_SUMMARY.md  HOP4_COMPLETION_SUMMARY.md  HOP7_COMPLETION_SUMMARY.md  HOP_10_COMPLETE.md  JSON_VALIDATION.md  Makefile  README.md  ROADMAP.md  ROADMAP_NEW.md  ROADMAP_OLD.md  UI_IMPROVEMENTS_SUMMARY.md  WORKFLOW_ENHANCEMENT_SUMMARY.md  combat_demo.py  pyproject.toml  run_game.sh  systemupkeep.md  test_and_run.sh  test_apartment.py  test_feedback_system.py  test_full_navigation.py  test_menu_flow.py  test_ui_improvements.py  validate_json.py
.github/prompts/: Acsii-python-bd.prompt.md
Documentation/: Brokendivinity.md  ROADMAP.md  database_implementation_summary.md  database_schema.md  sqlite_workflow.md
Personal Style /: Close-to-Shore Bible.md
config/: settings.yaml
data/abilities/: detective_abilities.json  infernal_bolt.json  minor_curse.json  shadow_step.json
data/buffs/: blessing.json  combat_focus.json  combat_training.json  evasion.json  rage.json  shield_wall.json
data/character_backgrounds/: detective.json  scholar.json  survivor.json
data/entities/: corrupt_officer.json  crime_boss.json  detective.json  gang_lieutenant.json  imp.json  imp_new.json  street_thug.json
data/locations/: apartment.json
data/status_effects/: bleed.json  burn.json  haste.json  hungover.json  poison.json  slow.json  stun.json  (+1 more)
schemas/: abilities_schema.json  character_backgrounds_schema.json  locations_schema.json  status_effects_schema.json
src/: __init__.py  main.py
templates/: ability_template.json  status_effect_template.json
tests/: __init__.py  test_abilities.py  test_apartment_exploration.py  test_base_registry.py  test_battle_manager.py  test_buff_registry.py  test_combat_screen.py  test_entity_registry.py  test_game_flow.py  test_game_state_machine.py  test_logging.py  test_main_menu.py  test_signal_bus.py  test_state_registry.py  test_suffix_registry.py  test_turn_manager.py  test_warsim_ui.py
(+36 files in other folders)
